--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -73,10 +73,10 @@ combination of measurements from ATLAS and CMS is also foreseen for
 the results at \eighttev{}.
 
 Despite the fact that the Tevatron excess is less significant, there
-is good 
-at the LHC is only to settle this experimental puzzle. Even if the
-Tevatron excess is not real, the LHC is probing a 
-where new physics could manifest itself 
+are good reasons to measure the asymmetry at the LHC in order to
+settle this experimental puzzle. Even if the Tevatron excess is not
+real, the LHC is probing a new kinematic regime where new physics
+could manifest itself with effects on \ttbar{} production.
 
 Due to the different initial state and subsequently different
 asymmetry definitions, a direct comparison with the anomaly reported
@@ -104,6 +104,11 @@ photons~\cite{Aguilar-Saavedra:2014vta}.
 In fact, the SM--like \ac{} at the LHC could be the result of an accidental
 cancellation of asymmetries of different sign for $\uubar\to\ttbar$
 and $\ddbar\to\ttbar$, and the $\ttbar{}\gamma$ signature would allow
-the 
-high integrated luminosity
+to break such cancellation, but requires a high integrated luminosity.
 
+The strategies and techniques developed in this dissertation would prove
+valuable in the next round of new physics searches and precision
+measurements in the top quark sector at the LHC \mbox{Run 2}.
+Whether or not these measurements reveal new physics effects, they
+will contribute in a significant way to advance our understanding on
+how Nature operates at its most fundamental level.
