--- a/tex/selection_plots.tex
+++ b/tex/selection_plots.tex
@@ -6,13 +6,14 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/pretag/Jet1_Eta}
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/pretag/WMt}
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/pretag/MET}
-  \caption{Combarison between data and prediction for the \mujets{} channel in the pretag
-    sample at $\sqrt{s} = 7 \TeV{}$. From the top left to the bottom
-    right, \pt{}, and $\eta{}$ distributions are shown for the
-    muon (top) and for the leading jet (middle).  The distributions
-    for the W transverse mass \mtw{} and the missing transverse
-    momentum \met{} are shown in the bottom row. 
-    The uncertainties on background normalization are shown.}
+  \caption{
+    Comparison between data and prediction for the \mujets{}
+    channel in the pretag sample at $\sqrt{s} = 7 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on background normalization are shown as a
+    hatched band over the total prediction.
+  }
   \label{fig:2011mu_pretag}
 \end{figure}
 %
@@ -24,13 +25,14 @@
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/tagged/Jet1_Eta}
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/tagged/WMt}
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/mujets/tagged/MET}
-\caption{Comparison between data and prediction for the \mujets{} channel in the tagged
-  sample at $\sqrt{s} = 7 \TeV{}$.  From the top left to the bottom
-  right, \pt{}, and $\eta$ distributions are shown for the
-  muon (top) and for the leading jet (middle). The bottom plots show
-  the W transverse mass \mtw{} and the missing transverse
-  momentum \met{}. The uncertainties on background normalization are
-  shown.}
+\caption{
+    Comparison between data and prediction for the \mujets{}
+    channel in the tagged sample at $\sqrt{s} = 7 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on background normalization are shown as a
+    hatched band over the total prediction.
+}
 \label{fig:2011mu_tagged}
 \end{figure}
 %
@@ -42,13 +44,14 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/pretag/Jet1_Eta}
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/pretag/WMt}
   \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/pretag/MET}
-  \caption{Comparison between data and prediction for the \ejets{} channel in the pretag
-    sample at $\sqrt{s} = 7 \TeV{}$.  From the top left to the bottom
-    right, \pt{} and $\eta$ distributions are shown for the
-    electron (top) and for the leading jet (middle). The bottom plots
-    show the W transverse mass \mtw{} and the missing transverse
-    momentum \met{}. The uncertainties on background normalization are
-    shown.} 
+  \caption{
+    Comparison between data and prediction for the \ejets{}
+    channel in the pretag sample at $\sqrt{s} = 7 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on background normalization are shown as a
+    hatched band over the total prediction.
+  } 
   \label{fig:2011ele_pretag}
 \end{figure}
 %                                      
@@ -60,12 +63,14 @@
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/tagged/Jet1_Eta}
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/tagged/WMt}
 \includegraphics[width=0.495\textwidth]{figures/selection/7TeV/ejets/tagged/MET}
-\caption{Comparison between data and prediction for the \ejets{} channel in the tagged
-  sample at $\sqrt{s} = 7 \TeV{}$.  From the top left to the bottom
-  right, \pt{} and $\eta$ distributions are shown for the
-  electron (top) and for the leading jet (middle). The bottom plots
-  show the W transverse mass \mtw{} and the missing transverse
-  momentum \met{}. The uncertainties on background normalization are shown.}
+\caption{
+    Comparison between data and prediction for the \ejets{}
+    channel in the tagged sample at $\sqrt{s} = 7 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on background normalization are shown as a
+    hatched band over the total prediction.
+  }
 \label{fig:2011ele_tagged}
 \end{figure}
 
@@ -79,13 +84,15 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/pretag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/pretag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/pretag/met}
-  \caption{Comparison between data and prediction for the \mujets{} channel in the pretag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom
-    right, \pt{} and $\eta$ distributions are shown for the
-    muon (top) and for the leading jet (middle).  The distributions
-    for the W transverse mass \mtw{} and the missing transverse
-    momentum \met{} are shown in the bottom row. 
-    The uncertainties on background normalization are shown.
+  \caption{
+    Comparison between data and prediction for the \mujets{}
+    channel in the pretag sample at $\sqrt{s} = 8 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on normalization of backgrounds other than
+    \wjets{} are shown as a hatched band over the total prediction.
+    Normalizations and corresponding uncertainties are not calibrated
+    (see~\ref{sec:marginalization}).
   }
   \label{fig:2012mu_pretag}
 \end{figure}
@@ -98,13 +105,15 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/zeroTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/zeroTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/zeroTag/met}
-  \caption{Comparison between data and prediction for the \mujets{}
-    channel in the 0 $b$--jets sample at $\sqrt{s} = 8 \TeV{}$.  From
-    the top left to the bottom right, \pt{} and $\eta$ distributions are shown for the
-    muon (top) and for the leading jet (middle). The bottom plots show
-    the W transverse mass \mtw{} and the missing transverse
-    momentum \met{}. 
-    The uncertainties on background normalization are shown.
+  \caption{
+    Comparison between data and prediction for the \mujets{}
+    channel in the 0 $b$--jets sample at $\sqrt{s} = 8 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on normalization of backgrounds other than
+    \wjets{} are shown as a hatched band over the total prediction.
+    Normalizations and corresponding uncertainties are not calibrated
+    (see~\ref{sec:marginalization}).
   }
   \label{fig:2012mu_0tag}
 \end{figure}
@@ -117,14 +126,16 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/oneTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/oneTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/oneTag/met}
-  \caption{Comparison between data and prediction for the \mujets{}
-    channel in the 1 $b$--jet sample at $\sqrt{s} = 8 \TeV{}$.  From
-    the top left to the bottom right, \pt{} and $\eta$ distributions are shown for the
-    muon (top) and for the leading jet (middle). The bottom plots show
-    the W transverse mass \mtw{} and the missing transverse
-    momentum \met{}. 
-    The uncertainties on background normalization are shown.
-  }
+  \caption{
+    Comparison between data and prediction for the \mujets{}
+    channel in the 1 $b$--jet sample at $\sqrt{s} = 8 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on normalization of backgrounds other than
+    \wjets{} are shown as a hatched band over the total prediction.
+    Normalizations and corresponding uncertainties are not calibrated
+    (see~\ref{sec:marginalization}).
+   }
   \label{fig:2012mu_1tag}
 \end{figure}
 %
@@ -136,13 +147,15 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/twoTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/twoTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/mujets/twoTag/met}
-  \caption{Comparison between data and prediction for the \mujets{}
-    channel in the 2 $b$--jets sample at $\sqrt{s} = 8 \TeV{}$.  From
-    the top left to the bottom right, \pt{} and $\eta$ distributions are shown for the
-    muon (top) and for the leading jet (middle). The bottom plots show
-    the W transverse mass \mtw{} and the missing transverse
-    momentum \met{}. 
-    The uncertainties on background normalization are shown.
+  \caption{
+    Comparison between data and prediction for the \mujets{}
+    channel in the $\geq2~b$--jet sample at $\sqrt{s} = 8 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on normalization of backgrounds other than
+    \wjets{} are shown as a hatched band over the total prediction.
+    Normalizations and corresponding uncertainties are not calibrated
+    (see~\ref{sec:marginalization}).
   }
   \label{fig:2012mu_2tag}
 \end{figure}
@@ -155,13 +168,15 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/pretag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/pretag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/pretag/met}
-  \caption{Comparison between data and prediction for the \ejets{} channel in the pretag
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom
-    right, \pt{} and $\eta$ distributions are shown for the
-    electron (top) and for the leading jet (middle). The bottom plots
-    show the W transverse mass \mtw{} and the missing transverse
-    momentum \met{}. 
-    The uncertainties on background normalization are shown.
+  \caption{
+    Comparison between data and prediction for the \ejets{}
+    channel in the pretag sample at $\sqrt{s} = 8 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on normalization of backgrounds other than
+    \wjets{} are shown as a hatched band over the total prediction.
+    Normalizations and corresponding uncertainties are not calibrated
+    (see~\ref{sec:marginalization}).
   }
   \label{fig:2012ele_pretag}
 \end{figure}
@@ -174,13 +189,15 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/zeroTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/zeroTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/zeroTag/met}
-  \caption{Comparison between data and prediction for the \ejets{}
-    channel in the 0 $b$--jet sample at $\sqrt{s} = 8 \TeV{}$.  From
-    the top left to the bottom right, \pt{}, and $\eta$ distributions are shown for the
-    electron (top) and for the leading jet (middle). The bottom plots
-    show the W transverse mass \mtw{} and the missing transverse
-    momentum \met{}.
-    The uncertainties on background normalization are shown.
+  \caption{
+    Comparison between data and prediction for the \ejets{}
+    channel in the 0 $b$--jets sample at $\sqrt{s} = 8 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on normalization of backgrounds other than
+    \wjets{} are shown as a hatched band over the total prediction.
+    Normalizations and corresponding uncertainties are not calibrated
+    (see~\ref{sec:marginalization}).
   }
   \label{fig:2012ele_0tag}
 \end{figure}
@@ -193,13 +210,15 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/oneTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/oneTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/oneTag/met}
-  \caption{Comparison between data and prediction for the \ejets{}
-    channel in the 1 $b$--jet sample at $\sqrt{s} = 8 \TeV{}$.  From
-    the top left to the bottom right, \pt{} and $\eta$ distributions are shown for the
-    electron (top) and for the leading jet (middle). The bottom plots
-    show the W transverse mass \mtw{} and the missing transverse
-    momentum \met{}.
-    The uncertainties on background normalization are shown.
+  \caption{
+    Comparison between data and prediction for the \ejets{}
+    channel in the 1 $b$--jet sample at $\sqrt{s} = 8 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on normalization of backgrounds other than
+    \wjets{} are shown as a hatched band over the total prediction.
+    Normalizations and corresponding uncertainties are not calibrated
+    (see~\ref{sec:marginalization}).
   }
   \label{fig:2012ele_1tag}
 \end{figure}
@@ -212,14 +231,15 @@
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/twoTag/jet_eta_1}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/twoTag/mtw}
   \includegraphics[width=0.495\textwidth]{figures/selection/8TeV/ejets/twoTag/met}
-  \caption{Comparison between data and prediction for the \ejets{}
-    channel in the 2 $b$--jets
-    sample at $\sqrt{s} = 8 \TeV{}$.  From the top left to the bottom right,
-   \pt{} and $\eta$ distributions are shown for the
-    electron (top) and for the leading jet (middle). The bottom plots
-    show the W transverse mass \mtw{} and the missing transverse
-    momentum \met{}. 
-    The uncertainties on background normalization are shown.
+  \caption{
+   Comparison between data and prediction for the \ejets{}
+    channel in the $\geq2~b$--jet sample at $\sqrt{s} = 8 \TeV{}$. Top: lepton \pt{} and
+    $\eta$. Center: leading jet \pt{} and $\eta$. Bottom: $W$ boson
+    transverse mass \mtw{} and missing transverse momentum \met{}.
+    The uncertainties on normalization of backgrounds other than
+    \wjets{} are shown as a hatched band over the total prediction.
+    Normalizations and corresponding uncertainties are not calibrated
+    (see~\ref{sec:marginalization}).
   }
   \label{fig:2012ele_2tag}
 \end{figure}
