--- a/tex/appendix_selection.tex
+++ b/tex/appendix_selection.tex
@@ -4,7 +4,7 @@ distributions of basic kinematic quantities of the reconstructed
 objects are considered, such as $\pt{}$ and $\eta$ of lepton or jets,
 \met{} and \mtw{}. The distributions corresponding to the dataset at
 \seventev{} are shown in
-Fig.~\ref{fig:2011mu_pretag}--\ref{fig:2011ele_tagged}, while the ones
+Figs.~\ref{fig:2011mu_pretag}--\ref{fig:2011ele_tagged}, while the ones
 at \eighttev{} are shown in
-Fig.~\ref{fig:2012mu_pretag}--\ref{fig:2012ele_2tag}. 
+Figs.~\ref{fig:2012mu_pretag}--\ref{fig:2012ele_2tag}. 
 \input{tex/selection_plots.tex}
